# pldatacli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
data/: Superstore.csv  monthly_sales.csv  monthly_west.csv  output.parquet  pivot.yaml  pivot_results.parquet  query.yaml  res.parquet  results.csv  results.parquet  test1.yaml  test2.yaml  test3.yaml  test4.yaml
data/templates/: pivot.yaml  query.yaml
src/pldatacli/: __init__.py  cli.py
src/pldatacli/commands/: agg.py  dry_run.py  export.py  filter.py  generate_yaml.py  groupby.py  init.py  limit.py  pivot.py  rounding.py  run.py  schema.py  sort.py  sql.py  truncate.py
src/pldatacli/io/: loader.py
src/pldatacli/parsers/: agg_parser.py  filter_parser.py
src/pldatacli/render/: table.py
tests/: test_commands.py  test_loader.py  test_parsers.py  test_pipeline.py
